@@ -2,6 +2,6 @@ AUX webkit-gtk-1.1.10-reduce-gnome-keyring-req.patch 363 RMD160 89f5fb0c5ac6925b
 DIST webkit-1.1.10.tar.gz 6343872 RMD160 c3d5a7b9793318d0fc9f4d170b7aeac7a6f30735 SHA1 8f0637c936b4f62fb21c8d0c35298e5c0317fd0a SHA256 4eb4fc4a3f47edbc18c9dc09d54fd2189954ebaa0e521b0ab97e21087d8c9855
 DIST webkit-1.1.15.2.tar.gz 6081293 RMD160 21298d312214ad0655703571286e81d553098fbb SHA1 ebf0fd805dd8397ae11701341806cd78002baa18 SHA256 ae76bf52bd7b57fd4b4ee5894f72d0fdb6ad550051efb6424f6a4466796798ac
 EBUILD webkit-gtk-1.1.10.ebuild 2982 RMD160 29ae9d26bc3b102e6b1726e900ae37ea2d158738 SHA1 75816c6f3c6b79a6cfad7e0342401bcce448e75e SHA256 afde3d3c2b7c5954ab4ee36585124619ed3e855b0ca287e0cb55de00416ce2e2
-EBUILD webkit-gtk-1.1.15.2.ebuild 2337 RMD160 5108d746e02b2548c41560ede59bf1f6f2aded78 SHA1 382b6ad5300471b11f580ac85ece072f6fd27c63 SHA256 42dc9cd322576bb78879738ff18ec8571289804ca293518374c81db1806fc09d
-MISC ChangeLog 12068 RMD160 f1131ad2f9af827521ef5f77832b60d72e2fd076 SHA1 6e5290bfc38794bdfe27a55584a4b44a1743c2b6 SHA256 05dade9c00ef477e8674784f4ba9c4deb81d777351cecab7bf0bd9cb47a67fff
+EBUILD webkit-gtk-1.1.15.2.ebuild 2545 RMD160 d31ae68e10d47419ae9dac15054d15a62fbc56a1 SHA1 46ea0b78923a10ac32e8698648bc55bef56e980b SHA256 0f14fdc4274ac839a3397c4bf8f9a1fdc88303415cf5beaaad612dda39c0d4f0
+MISC ChangeLog 12284 RMD160 9d0e648a14f6672d605d3218a0c7ddd9aa4bdeae SHA1 6e4650053c8519b95fe8552ec591d00ad1063233 SHA256 0336e68d334cf1534d3c06655c47555fb7544d1dc5759623796ab55376e8ad82
 MISC metadata.xml 511 RMD160 f92b89efcf0adad44e3f19adf0e0c30baacaed10 SHA1 373bd2cc8e0e724723da36f7fdc742cd44ccb35d SHA256 1d1d12891a988ba9e30946956a5f95caa30512bcf47479403367334fa38b9907
