@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/webkit-gtk
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.54 2009/11/09 19:12:53 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/webkit-gtk/ChangeLog,v 1.55 2009/11/14 14:50:59 armin76 Exp $
+
+  14 Nov 2009; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.1.15.2.ebuild,
+  +files/webkit-gtk-1.1.15.2-unaligned.patch:
+  Add patch from Debian to fix unaligned accesses, with permission from
+  remi, bug #292940
 
   09 Nov 2009; Raúl Porcel <armin76@gentoo.org> webkit-gtk-1.1.10.ebuild,
   webkit-gtk-1.1.15.2.ebuild:
